Devtools: Fix split widget animation overflow
In cases where a split widget animates a widget, a widget may overflow
overlapping another widget. This change ensures split widgets never
overflow.

Review URL: https://codereview.chromium.org/1159563005

git-svn-id: svn://svn.chromium.org/blink/trunk@195950 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/ui/splitWidget.css
+++ b/front_end/ui/splitWidget.css
@@ -26,6 +26,10 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+:host {
+    overflow: hidden;
+}
+
 .shadow-split-widget {
     display: flex;
     overflow: hidden;
